Update with my new username (CodeWithAlamin)

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+      content="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
     />
     <meta
       property="og:title"
@@ -33,14 +33,14 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/CodePapa360/Intro-section-with-dropdown-navigation/main/screenshots/Intro-section-with-dropdown-navigation-screenshot-codepapa360.png"
+      content="https://raw.githubusercontent.com/CodeWithAlamin/Intro-section-with-dropdown-navigation/main/screenshots/Intro-section-with-dropdown-navigation-screenshot-CodeWithAlamin.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+      content="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
     />
     <meta
       property="twitter:title"
@@ -52,14 +52,14 @@
     />
     <meta
       property="twitter:image"
-      content="https://raw.githubusercontent.com/CodePapa360/Intro-section-with-dropdown-navigation/main/screenshots/Intro-section-with-dropdown-navigation-screenshot-codepapa360.png"
+      content="https://raw.githubusercontent.com/CodeWithAlamin/Intro-section-with-dropdown-navigation/main/screenshots/Intro-section-with-dropdown-navigation-screenshot-CodeWithAlamin.png"
     />
 
     <!-- Optional -->
-    <meta name="author" content="Alamin , CodePapa360" />
+    <meta name="author" content="Alamin , CodeWithAlamin" />
     <meta
       name="keywords"
-      content="intro section, dropdown navigation, responsive web design, HTML, CSS, JavaScript, Frontend Mentor challenge, Alamin, CodePapa360"
+      content="intro section, dropdown navigation, responsive web design, HTML, CSS, JavaScript, Frontend Mentor challenge, Alamin, CodeWithAlamin"
     />
     <!--  -->
 
@@ -75,7 +75,7 @@
     <header class="header">
       <a
         class="logo"
-        href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+        href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
         aria-label="logo"
         ><img src="./images/logo.svg" alt="snap's logo"
       /></a>
@@ -84,7 +84,7 @@
         <ul class="nav-links">
           <li class="nav-link">
             <a
-              href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+              href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
               aria-label="features"
               class="dropdown"
             >
@@ -103,7 +103,7 @@
             <ul class="dropdown-list feature-dropdown">
               <li class="dropdown-link">
                 <a
-                  href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+                  href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
                   aria-label="todo-list"
                 >
                   <img src="./images/icon-todo.svg" alt="todo-list icon" />
@@ -112,7 +112,7 @@
               </li>
               <li class="dropdown-link">
                 <a
-                  href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+                  href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
                   aria-label="calender"
                 >
                   <img src="./images/icon-calendar.svg" alt="calender icon" />
@@ -121,7 +121,7 @@
               </li>
               <li class="dropdown-link">
                 <a
-                  href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+                  href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
                   aria-label="reminders"
                 >
                   <img src="./images/icon-reminders.svg" alt="bell icon" />
@@ -130,7 +130,7 @@
               </li>
               <li class="dropdown-link">
                 <a
-                  href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+                  href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
                   aria-label="planning"
                 >
                   <img src="./images/icon-planning.svg" alt="clock icon" />
@@ -142,7 +142,7 @@
 
           <li class="nav-link">
             <a
-              href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+              href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
               aria-label="company"
               class="dropdown"
             >
@@ -161,21 +161,21 @@
             <ul class="dropdown-list">
               <li class="dropdown-link">
                 <a
-                  href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+                  href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
                   aria-label="history"
                   >History</a
                 >
               </li>
               <li class="dropdown-link">
                 <a
-                  href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+                  href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
                   aria-label="our-team"
                   >Our Team</a
                 >
               </li>
               <li class="dropdown-link">
                 <a
-                  href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+                  href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
                   aria-label="blog"
                   >Blog</a
                 >
@@ -185,14 +185,14 @@
 
           <li class="nav-link">
             <a
-              href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+              href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
               aria-label="careers"
               >Careers</a
             >
           </li>
           <li class="nav-link">
             <a
-              href="https://intro-section-with-dropdown-navigation-codepapa360.vercel.app/"
+              href="https://intro-section-with-dropdown-navigation-alamin.vercel.app/"
               aria-label="about"
               >About</a
             >
@@ -233,7 +233,7 @@
 
         <a
           class="btn btn-cta"
-          href="https://github.com/CodePapa360"
+          href="https://github.com/CodeWithAlamin"
           target="_blank"
           rel="noopener noreferrer"
           >Learn more</a
@@ -266,7 +266,7 @@
             Coded by
             <a
               class="attb-link"
-              href="https://twitter.com/CodePapa360"
+              href="https://twitter.com/CodeWithAlamin"
               target="_blank"
               >Alamin</a
             >
@@ -275,7 +275,7 @@
             Challenge by
             <a
               class="attb-link attb-fem"
-              href="https://www.frontendmentor.io/profile/CodePapa360"
+              href="https://www.frontendmentor.io/profile/CodeWithAlamin"
               target="_blank"
               >Frontend Mentor</a
             >
